--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.487.0",
     "next": "14.1.1",
     "next-themes": "^0.4.6",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.2",
