--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@react-pdf/renderer": "^4.3.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "class-variance-authority": "^0.7.1",
@@ -31,6 +32,7 @@
     "lucide-react": "^0.487.0",
     "next": "14.1.1",
     "next-themes": "^0.4.6",
+    "qrcode": "^1.5.4",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
