--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^18",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.2",
+    "resend": "^4.7.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
